cluster/apps/media/fileflows/resources/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileflows-server
  namespace: media
  labels:
    app: fileflows-server
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fileflows-server
  template:
    metadata:
      labels:
        app: fileflows-server
      annotations:
        backup.velero.io/backup-volumes-excludes: download,media,temp
    spec:
      containers:
        - name: fileflows
          image: docker.io/revenz/fileflows:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 1000m
              memory: 0.5Gi
            limits:
              cpu: 2000m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /app/Data
            - name: download
              mountPath: /download
            - name: media
              mountPath: /media
            - name: temp
              mountPath: /temp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: fileflows-config
        - name: download
          persistentVolumeClaim:
            claimName: fileflows-download
        - name: media
          persistentVolumeClaim:
            claimName: fileflows-media
        - name: temp
          emptyDir:
            sizeLimit: 100Gi
