cluster/apps/media/fileflows/resources/stateful-set-node.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fileflows-node
  namespace: media
  labels:
    app: fileflows-node
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: fileflows-node
  template:
    metadata:
      labels:
        app: fileflows-node
      annotations:
        backup.velero.io/backup-volumes-excludes: download,gpu,media,temp
    spec:
      containers:
        - name: fileflows
          image: docker.io/revenz/fileflows:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1000m
              gpu.intel.com/i915: 1
              gpu.intel.com/millicores: 500
              memory: 0.5Gi
            limits:
              cpu: 4000m
              gpu.intel.com/i915: 1
              gpu.intel.com/millicores: 500
              memory: 16Gi
          securityContext:
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
            allowPrivilegeEscalation: true
            privileged: true
          volumeMounts:
            - name: download
              mountPath: /download
            - name: gpu
              mountPath: /dev/dri
            - name: media
              mountPath: /media
            - name: temp
              mountPath: /temp
      volumes:
        - name: download
          persistentVolumeClaim:
            claimName: fileflows-download
        - name: gpu
          hostPath:
            path: /dev/dri
        - name: media
          persistentVolumeClaim:
            claimName: fileflows-media
        - name: temp
          emptyDir:
            sizeLimit: 250Gi
