cluster/apps/media/fileflows/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileflows
  namespace: media
spec:
  selector:
    app: fileflows-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
