cluster/apps/media/fileflows/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fileflows-http
  namespace: media
spec:
  hostnames:
    - fileflows.btkostner.network
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: fileflows
          port: 80
